--- a/requirements.txt
+++ b/requirements.txt
@@ -1,414 +1,164 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: linux-64
-_libgcc_mutex=0.1=conda_forge
-_openmp_mutex=4.5=2_gnu
-accelerate=0.25.0=pypi_0
-aiofiles=22.1.0=py310h06a4308_0
-aiosqlite=0.19.0=pyhd8ed1ab_0
-alsa-lib=1.2.10=hd590300_0
-annotated-types=0.6.0=pyhd8ed1ab_0
-anyio=3.7.1=pyhd8ed1ab_0
-argon2-cffi=23.1.0=pyhd8ed1ab_0
-argon2-cffi-bindings=21.2.0=py310h7f8727e_0
-asttokens=2.0.5=pyhd3eb1b0_0
-attr=2.5.1=h166bdaf_1
-attrs=23.1.0=py310h06a4308_0
-babel=2.13.0=pyhd8ed1ab_0
-backcall=0.2.0=pyhd3eb1b0_0
-beautifulsoup4=4.12.2=py310h06a4308_0
-benepar=0.2.0=pypi_0
-blas=1.0=mkl
-bleach=6.1.0=pyhd8ed1ab_0
-boltons=23.0.0=py310h06a4308_0
-boto3=1.34.0=pypi_0
-botocore=1.34.0=pypi_0
-bottleneck=1.3.5=py310ha9d4c09_0
-brotli=1.0.9=h5eee18b_7
-brotli-bin=1.0.9=h5eee18b_7
-brotli-python=1.0.9=py310h6a678d5_7
-brotlipy=0.7.0=py310h7f8727e_1002
-bzip2=1.0.8=h7b6447c_0
-ca-certificates=2023.11.17=hbcca054_0
-catalogue=2.0.10=pypi_0
-certifi=2023.11.17=pyhd8ed1ab_0
-cffi=1.15.1=py310h5eee18b_3
-charset-normalizer=3.3.0=pyhd8ed1ab_0
-click=8.1.7=unix_pyh707e725_0
-cloudpathlib=0.16.0=pyhd8ed1ab_0
-colorama=0.4.6=py310h06a4308_0
-comm=0.1.2=py310h06a4308_0
-conda=23.9.0=py310h06a4308_0
-conda-package-handling=2.2.0=py310h06a4308_0
-conda-package-streaming=0.9.0=py310h06a4308_0
-confection=0.1.4=py310h17c5347_0
-contourpy=1.0.5=py310hdb19cb5_0
-coreferee=1.4.1=pypi_0
-coreferee-model-en=1.0.0=pypi_0
-cryptography=41.0.3=py310hdda0065_0
-cssselect=1.2.0=pyhd8ed1ab_0
-cuda-cudart=11.8.89=0
-cuda-cupti=11.8.87=0
-cuda-libraries=11.8.0=0
-cuda-nvrtc=11.8.89=0
-cuda-nvtx=11.8.86=0
-cuda-runtime=11.8.0=0
-cuda-version=11.8=h70ddcb2_2
-cudatoolkit=11.8.0=h4ba93d1_12
-cupy=12.2.0=py310hf4db66c_4
-curated-tokenizers=0.0.8=pypi_0
-curated-transformers=0.1.1=pypi_0
-cycler=0.12.1=pyhd8ed1ab_0
-cymem=2.0.8=py310hc6cd4ac_1
-cyrus-sasl=2.1.28=h52b45da_1
-cython=3.0.6=pypi_0
-cython-blis=0.7.10=py310h1f7b6fc_2
-dbus=1.13.18=hb2f20db_0
-de-core-news-sm=3.5.0=pypi_0
-debugpy=1.6.7=py310h6a678d5_0
-decorator=5.1.1=pyhd3eb1b0_0
-defusedxml=0.7.1=pyhd3eb1b0_0
-en-core-web-lg=3.5.0=pypi_0
-en-core-web-md=3.5.0=pypi_0
-en-core-web-sm=3.5.0=pypi_0
-en-core-web-trf=3.5.0=pypi_0
-entrypoints=0.4=py310h06a4308_0
-exceptiongroup=1.0.4=py310h06a4308_0
-executing=0.8.3=pyhd3eb1b0_0
-expat=2.5.0=h6a678d5_0
-fake-useragent=1.3.0=pyhd8ed1ab_0
-fastrlock=0.8.2=py310hc6cd4ac_1
-feedfinder2=0.0.4=py_0
-feedparser=6.0.10=pyhd8ed1ab_0
-ffmpeg=4.3=hf484d3e_0
-fftw=3.3.10=nompi_hf0379b8_106
-filelock=3.13.1=py310h06a4308_0
-font-ttf-dejavu-sans-mono=2.37=hd3eb1b0_0
-font-ttf-inconsolata=3.000=h77eed37_0
-font-ttf-source-code-pro=2.038=h77eed37_0
-font-ttf-ubuntu=0.83=h8b1ccd4_0
-fontconfig=2.14.1=h4c34cd2_2
-fonts-anaconda=1=h8fa9717_0
-fonts-conda-ecosystem=1=hd3eb1b0_0
-fonts-conda-forge=1=0
-fonttools=4.25.0=pyhd3eb1b0_0
-freetype=2.12.1=h4a9f257_0
-fsspec=2023.12.2=pypi_0
-gettext=0.21.1=h27087fc_0
-giflib=5.2.1=h5eee18b_3
-glib=2.78.0=hfc55251_0
-glib-tools=2.78.0=hfc55251_0
-gmp=6.2.1=h295c915_3
-gmpy2=2.1.2=py310heeb90bb_0
-gnutls=3.6.15=he1e5248_0
-gst-plugins-base=1.14.1=h6a678d5_1
-gstreamer=1.14.1=h5eee18b_1
-gstreamer-orc=0.4.34=hd590300_0
-huggingface-hub=0.19.4=pypi_0
-icecream=2.1.3=pypi_0
-icu=58.2=he6710b0_3
-idna=3.4=py310h06a4308_0
-ijson=3.2.3=pyhd8ed1ab_0
-importlib-metadata=6.8.0=pyha770c72_0
-importlib_resources=6.1.0=pyhd8ed1ab_0
-iniconfig=2.0.0=pypi_0
-intel-openmp=2023.1.0=hdb19cb5_46305
-ipykernel=6.25.0=py310h2f386ee_0
-ipympl=0.9.3=pyhd8ed1ab_0
-ipython=8.15.0=py310h06a4308_0
-ipython_genutils=0.2.0=pyhd3eb1b0_1
-ipywidgets=8.0.4=py310h06a4308_0
-jack=1.9.22=h7c63dc7_2
-jedi=0.18.1=py310h06a4308_1
-jellyfish=1.0.3=py310hcb5633a_0
-jieba3k=0.35.1=py310hff52083_1008
-jinja2=3.1.2=py310h06a4308_0
-jmespath=1.0.1=pypi_0
-joblib=1.2.0=py310h06a4308_0
-jpeg=9e=h5eee18b_1
-json5=0.9.14=pyhd8ed1ab_0
-jsonpatch=1.32=pyhd3eb1b0_0
-jsonpointer=2.1=pyhd3eb1b0_0
-jsonschema=4.17.3=py310h06a4308_0
-jupyter_client=8.1.0=py310h06a4308_0
-jupyter_contrib_core=0.4.0=pyhd8ed1ab_0
-jupyter_contrib_nbextensions=0.7.0=pyhd8ed1ab_0
-jupyter_core=5.3.0=py310h06a4308_0
-jupyter_events=0.6.3=py310h06a4308_0
-jupyter_highlight_selected_word=0.2.0=pyhd8ed1ab_1006
-jupyter_latex_envs=1.4.6=pyhd8ed1ab_1002
-jupyter_nbextensions_configurator=0.6.1=pyhd8ed1ab_0
-jupyter_server=2.5.0=py310h06a4308_0
-jupyter_server_fileid=0.9.0=py310h06a4308_0
-jupyter_server_terminals=0.4.4=py310h06a4308_1
-jupyter_server_ydoc=0.8.0=py310h06a4308_1
-jupyter_ydoc=0.2.4=py310h06a4308_0
-jupyterlab=3.6.6=pyhd8ed1ab_0
-jupyterlab_pygments=0.2.2=pyhd8ed1ab_0
-jupyterlab_server=2.22.0=py310h06a4308_0
-jupyterlab_widgets=3.0.5=py310h06a4308_0
-kiwisolver=1.4.4=py310h6a678d5_0
-krb5=1.20.1=h143b758_1
-lame=3.100=h7b6447c_0
-langcodes=3.3.0=pyhd8ed1ab_0
-lcms2=2.12=h3be6417_0
-ld_impl_linux-64=2.38=h1181459_1
-lerc=3.0=h295c915_0
-libbrotlicommon=1.0.9=h5eee18b_7
-libbrotlidec=1.0.9=h5eee18b_7
-libbrotlienc=1.0.9=h5eee18b_7
-libcap=2.69=h0f662aa_0
-libclang=14.0.6=default_hc6dbbc7_1
-libclang13=14.0.6=default_he11475f_1
-libcublas=11.11.3.6=0
-libcufft=10.9.0.58=0
-libcufile=1.8.1.2=0
-libcups=2.4.2=h2d74bed_1
-libcurand=10.3.4.101=0
-libcusolver=11.4.1.48=0
-libcusparse=11.7.5.86=0
-libdb=6.2.32=h6a678d5_1
-libdeflate=1.17=h5eee18b_1
-libedit=3.1.20221030=h5eee18b_0
-libevent=2.1.12=hdbd6064_1
-libffi=3.4.4=h6a678d5_0
-libflac=1.4.3=h59595ed_0
-libgcc-ng=13.2.0=h807b86a_2
-libgcrypt=1.10.1=h166bdaf_0
-libgfortran-ng=11.2.0=h00389a5_1
-libgfortran5=11.2.0=h1234567_1
-libglib=2.78.0=hebfc3b9_0
-libgomp=13.2.0=h807b86a_2
-libgpg-error=1.47=h71f35ed_0
-libiconv=1.17=h166bdaf_0
-libidn2=2.3.4=h5eee18b_0
-libjpeg-turbo=2.0.0=h9bf148f_0
-libllvm14=14.0.6=hdb19cb5_3
-libllvm15=15.0.7=hadd5161_1
-libnpp=11.8.0.86=0
-libnvjpeg=11.9.0.86=0
-libogg=1.3.5=h27cfd23_1
-libopus=1.3.1=h7b6447c_0
-libpng=1.6.39=h5eee18b_0
-libpq=12.15=hdbd6064_1
-libsndfile=1.2.2=hc60ed4a_1
-libsodium=1.0.18=h7b6447c_0
-libsqlite=3.43.2=h2797004_0
-libstdcxx-ng=13.2.0=h7e041cc_2
-libsystemd0=254=h3516f8a_0
-libtasn1=4.19.0=h5eee18b_0
-libtiff=4.5.1=h6a678d5_0
-libtool=2.4.7=h27087fc_0
-libudev1=254=h3f72095_0
-libunistring=0.9.10=h27cfd23_0
-libuuid=1.41.5=h5eee18b_0
-libuv=1.44.2=h5eee18b_0
-libvorbis=1.3.7=h7b6447c_0
-libwebp=1.3.2=h11a3e52_0
-libwebp-base=1.3.2=h5eee18b_0
-libxcb=1.15=h7f8727e_0
-libxkbcommon=1.0.1=h5eee18b_1
-libxml2=2.10.4=hcbfbd50_0
-libxslt=1.1.37=h2085143_0
-libzlib=1.2.13=hd590300_5
-llvm-openmp=14.0.6=h9e868ea_0
-loguru=0.7.2=pypi_0
-lxml=4.9.2=py310hbdc0903_0
-lz4-c=1.9.4=h6a678d5_0
-markdown-it-py=3.0.0=pyhd8ed1ab_0
-markupsafe=2.1.1=py310h7f8727e_0
-matplotlib=3.8.0=py310hff52083_2
-matplotlib-base=3.8.0=py310h62c0568_2
-matplotlib-inline=0.1.6=py310h06a4308_0
-mdurl=0.1.0=pyhd8ed1ab_0
-mistune=3.0.1=pyhd8ed1ab_0
-mkl=2023.1.0=h213fc3f_46343
-mkl-service=2.4.0=py310h5eee18b_1
-mkl_fft=1.3.8=py310h5eee18b_0
-mkl_random=1.2.4=py310hdb19cb5_0
-mpc=1.1.0=h10f8cd9_1
-mpfr=4.0.2=hb69a4c5_1
-mpg123=1.32.3=h59595ed_0
-mpmath=1.3.0=py310h06a4308_0
-munkres=1.1.4=py_0
-murmurhash=1.0.10=py310hc6cd4ac_1
-mysql=5.7.24=h721c034_2
-mysql-common=8.0.33=hf1915f5_5
-mysql-libs=8.0.33=hca2cd23_5
-nbclassic=1.0.0=pyhb4ecaf3_1
-nbclient=0.8.0=pyhd8ed1ab_0
-nbconvert=7.9.2=pyhd8ed1ab_0
-nbconvert-core=7.9.2=pyhd8ed1ab_0
-nbconvert-pandoc=7.9.2=pyhd8ed1ab_0
-nbformat=5.9.2=py310h06a4308_0
-ncurses=6.4=h6a678d5_0
-nest-asyncio=1.5.6=py310h06a4308_0
-nettle=3.7.3=hbbd107a_1
-networkx=3.1=py310h06a4308_0
-newspaper3k=0.2.8=pyhd8ed1ab_3
-nltk=3.8.1=py310h06a4308_0
-nodejs=18.16.0=h2d74bed_0
-notebook=6.5.4=pyha770c72_0
-notebook-shim=0.2.3=pyhd8ed1ab_0
-nspr=4.35=h6a678d5_0
-nss=3.94=h1d7d5a4_0
-numexpr=2.8.7=py310h85018f9_0
-numpy=1.26.0=py310h5f9d8c6_0
-numpy-base=1.26.0=py310hb5e798b_0
-openh264=2.1.1=h4ff587b_0
-openjpeg=2.4.0=h3ad879b_0
-openssl=3.2.0=hd590300_1
-packaging=23.1=py310h06a4308_0
-pandas=2.1.1=py310h1128e8f_0
-pandoc=3.1.3=h32600fe_0
-pandocfilters=1.5.0=pyhd3eb1b0_0
-parso=0.8.3=pyhd3eb1b0_0
-pathy=0.10.1=py310h06a4308_0
-pcre=8.45=h295c915_0
-pcre2=10.40=hc3806b6_0
-pexpect=4.8.0=pyhd3eb1b0_3
-pickleshare=0.7.5=pyhd3eb1b0_1003
-pillow=10.0.1=py310ha6cbd5a_0
-pip=23.3=py310h06a4308_0
-pkgutil-resolve-name=1.3.10=pyhd8ed1ab_1
-plac=1.1.3=pypi_0
-platformdirs=3.10.0=py310h06a4308_0
-pluggy=1.0.0=py310h06a4308_1
-ply=3.11=py310h06a4308_0
-portalocker=2.8.2=py310hff52083_1
-preshed=3.0.9=py310hc6cd4ac_1
-prometheus_client=0.17.1=pyhd8ed1ab_0
-prompt-toolkit=3.0.36=py310h06a4308_0
-protobuf=3.20.3=pypi_0
-psutil=5.9.0=py310h5eee18b_0
-pthread-stubs=0.4=h36c2ea0_1001
-ptyprocess=0.7.0=pyhd3eb1b0_2
-pulseaudio=16.1=h59595ed_5
-pulseaudio-client=16.1=hb77b528_5
-pulseaudio-daemon=16.1=haa314ec_5
-pure_eval=0.2.2=pyhd3eb1b0_0
-pycosat=0.6.6=py310h5eee18b_0
-pycparser=2.21=pyhd3eb1b0_0
-pydantic=1.10.13=pypi_0
-pydantic-core=2.14.5=py310hcb5633a_0
-pygments=2.15.1=py310h06a4308_1
-pymongo=3.12.0=py310h295c915_0
-pyopenssl=23.2.0=py310h06a4308_0
-pyparsing=3.0.9=py310h06a4308_0
-pyqt=5.15.7=py310h6a678d5_1
-pyqt5-sip=12.11.0=pypi_0
-pyrsistent=0.18.0=py310h7f8727e_0
-pysocks=1.7.1=py310h06a4308_0
-pytest=7.4.3=pypi_0
-pytextrank=3.2.5=pypi_0
-python=3.10.13=h955ad1f_0
-python-dateutil=2.8.2=pyhd3eb1b0_0
-python-fastjsonschema=2.18.1=pyhd8ed1ab_0
-python-graphviz=0.20.1=pypi_0
-python-json-logger=2.0.7=py310h06a4308_0
-python-tzdata=2023.3=pyhd3eb1b0_0
-python_abi=3.10=2_cp310
-pytorch=2.1.1=py3.10_cuda11.8_cudnn8.7.0_0
-pytorch-cuda=11.8=h7e8668a_5
-pytorch-mutex=1.0=cuda
-pytz=2023.3.post1=py310h06a4308_0
-pyyaml=6.0=py310h5eee18b_1
-pyzmq=25.1.0=py310h6a678d5_0
-qt-main=5.15.2=h7358343_9
-qt-webengine=5.15.9=h9ab4d14_7
-qtwebkit=5.212=h3fafdc1_5
-rake-nltk=1.0.6=pypi_0
-readline=8.2=h5eee18b_0
-regex=2023.10.3=py310h5eee18b_0
-requests=2.31.0=py310h06a4308_0
-requests-file=1.5.1=pyh9f0ad1d_0
-rfc3339-validator=0.1.4=py310h06a4308_0
-rfc3986-validator=0.1.1=py310h06a4308_0
-rich=13.7.0=pyhd8ed1ab_0
-ruamel.yaml=0.17.21=py310h5eee18b_0
-ruamel.yaml.clib=0.2.6=py310h5eee18b_1
-s3transfer=0.9.0=pypi_0
-safetensors=0.4.1=pypi_0
-scikit-learn=1.3.0=py310h1128e8f_0
-scipy=1.11.3=py310h5f9d8c6_0
-seaborn=0.12.2=py310h06a4308_0
-segtok=1.5.11=pyhd8ed1ab_0
-send2trash=1.8.2=pyh41d4057_0
-sentencepiece=0.1.99=pypi_0
-setuptools=68.0.0=py310h06a4308_0
-sgmllib3k=1.0.0=pyh9f0ad1d_0
-shellingham=1.5.4=pyhd8ed1ab_0
-sip=6.6.2=py310h6a678d5_0
-six=1.16.0=pyhd3eb1b0_1
-smart_open=6.4.0=pyhd8ed1ab_0
-sniffio=1.3.0=pyhd8ed1ab_0
-soupsieve=2.5=py310h06a4308_0
-spacy=3.5.4=pypi_0
-spacy-alignments=0.9.1=pypi_0
-spacy-dbpedia-spotlight=0.2.6=pypi_0
-spacy-experimental=0.6.4=pypi_0
-spacy-legacy=3.0.12=pyhd8ed1ab_0
-spacy-loggers=1.0.5=pyhd8ed1ab_0
-spacy-transformers=1.2.5=pypi_0
-sqlite=3.41.2=h5eee18b_0
-srsly=2.4.8=pypi_0
-stack_data=0.2.0=pyhd3eb1b0_0
-sympy=1.11.1=py310h06a4308_0
-tabulate=0.9.0=pyhd8ed1ab_1
-tbb=2021.8.0=hdb19cb5_0
-terminado=0.17.1=py310h06a4308_0
-thinc=8.1.12=pypi_0
-threadpoolctl=2.2.0=pyh0d69192_0
-tinycss2=1.2.1=py310h06a4308_0
-tinysegmenter=0.3=pyhd8ed1ab_0
-tk=8.6.13=h2797004_0
-tldextract=5.1.1=pyhd8ed1ab_0
-tokenizers=0.13.3=pypi_0
-toml=0.10.2=pyhd3eb1b0_0
-tomli=2.0.1=py310h06a4308_0
-torch-struct=0.5=pypi_0
-torchaudio=2.1.1=py310_cu118
-torchdata=0.7.1=py310
-torchtext=0.16.1=py310
-torchtriton=2.1.0=py310
-torchvision=0.16.1=py310_cu118
-tornado=6.3.3=py310h5eee18b_0
-tqdm=4.66.1=pyhd8ed1ab_0
-traitlets=5.7.1=py310h06a4308_0
-transformers=4.25.1=pypi_0
-truststore=0.8.0=py310h06a4308_0
-typer=0.7.0=pypi_0
-typing-extensions=4.8.0=hd8ed1ab_0
-typing_extensions=4.8.0=pyha770c72_0
-tzdata=2023c=h04d1e81_0
-urllib3=1.26.16=py310h06a4308_0
-wasabi=0.10.1=pypi_0
-wcwidth=0.2.5=pyhd3eb1b0_0
-weasel=0.3.4=pyhd8ed1ab_0
-webencodings=0.5.1=py310h06a4308_1
-websocket-client=1.6.4=pyhd8ed1ab_0
-wheel=0.41.2=py310h06a4308_0
-widgetsnbextension=4.0.5=py310h06a4308_0
-wordcloud=1.9.3=py310h2372a71_0
-xcb-util=0.4.0=hd590300_1
-xcb-util-image=0.4.0=h8ee46fc_1
-xcb-util-keysyms=0.4.0=h8ee46fc_1
-xcb-util-renderutil=0.3.9=hd590300_1
-xcb-util-wm=0.4.1=h8ee46fc_1
-xkeyboard-config=2.40=hd590300_0
-xorg-kbproto=1.0.7=h7f98852_1002
-xorg-libx11=1.8.7=h8ee46fc_0
-xorg-libxau=1.0.11=hd590300_0
-xorg-libxdmcp=1.1.3=h7f98852_0
-xorg-xextproto=7.3.0=h0b41bf4_1003
-xorg-xproto=7.0.31=h27cfd23_1007
-xz=5.4.2=h5eee18b_0
-y-py=0.5.9=py310h52d8a92_0
-yake=0.4.8=pyhd8ed1ab_0
-yaml=0.2.5=h7b6447c_0
-ypy-websocket=0.8.2=py310h06a4308_0
-zeromq=4.3.4=h2531618_0
-zipp=3.17.0=pyhd8ed1ab_0
-zlib=1.2.13=hd590300_5
-zstandard=0.19.0=py310h5eee18b_0
-zstd=1.5.5=hc292b87_0
+accelerate==0.25.0
+annotated-types==0.6.0
+asttokens==2.0.5
+backcall==0.2.0
+beautifulsoup4==4.12.2
+benepar==0.2.0
+blis==0.7.11
+Bottleneck==1.3.5
+Brotli==1.0.9
+catalogue==2.0.10
+certifi==2023.11.17
+cffi==1.16.0
+chardet==4.0.0
+charset-normalizer==2.0.4
+click==8.1.7
+cloudpathlib==0.16.0
+colorama==0.4.6
+comm==0.1.4
+confection==0.1.4
+contourpy==1.2.0
+coreferee==1.4.1
+coreferee-model-en==1.0.0
+cryptography==41.0.7
+cssselect==1.2.0
+cycler==0.12.1
+cymem==2.0.8
+daal4py==2023.1.1
+debugpy==1.6.7
+decorator==5.1.1
+en-core-web-lg==3.5.0
+en-core-web-md==3.5.0
+en-core-web-sm==3.5.0
+en-core-web-trf==3.5.0
+exceptiongroup==1.0.4
+executing==0.8.3
+feedfinder2==0.0.4
+feedparser==6.0.10
+filelock==3.13.1
+fonttools==4.47.0
+fsspec==2023.12.2
+gmpy2==2.1.2
+graphviz==0.20.1
+huggingface-hub==0.20.1
+icecream==2.1.3
+idna==3.4
+ipykernel==6.25.0
+ipython==8.15.0
+ipywidgets==8.1.1
+jedi==0.18.1
+jellyfish==1.0.3
+jieba3k==0.35.1
+Jinja2==3.1.2
+joblib==1.2.0
+jupyter_client==8.6.0
+jupyter_core==5.5.0
+jupyterlab-widgets==3.0.9
+kiwisolver==1.4.5
+langcodes==3.3.0
+loguru==0.7.2
+lxml==4.9.2
+MarkupSafe==2.1.1
+matplotlib==3.8.2
+matplotlib-inline==0.1.6
+mkl-fft==1.3.8
+mkl-random==1.2.4
+mkl-service==2.4.0
+mpmath==1.3.0
+munkres==1.1.4
+murmurhash==1.0.10
+nest-asyncio==1.5.6
+networkx==3.1
+newspaper3k==0.2.8
+nltk==3.8.1
+numexpr==2.8.7
+numpy==1.26.0
+olefile==0.47
+packaging==23.1
+pandas==2.1.1
+parso==0.8.3
+pathy==0.10.3
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==8.4.0
+pip==23.3.1
+platformdirs==3.10.0
+ply==3.11
+preshed==3.0.9
+prompt-toolkit==3.0.36
+protobuf==3.20.3
+psutil==5.9.0
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pycparser==2.21
+pydantic==1.10.13
+pydantic_core==2.14.6
+Pygments==2.15.1
+pyOpenSSL==23.2.0
+pyparsing==3.1.1
+PyQt5==5.15.10
+PyQt5-sip==12.13.0
+PySocks==1.7.1
+pytextrank==3.2.5
+python-crfsuite==0.9.9
+python-dateutil==2.8.2
+pytz==2023.3.post1
+PyYAML==6.0.1
+pyzmq==25.1.0
+rake-nltk==1.0.6
+regex==2023.10.3
+requests==2.31.0
+requests-file==1.5.1
+safetensors==0.4.1
+scikit-learn==1.3.0
+scikit-learn-intelex==20230426.111436
+scipy==1.11.3
+seaborn==0.12.2
+segtok==1.5.11
+sentencepiece==0.1.99
+setuptools==68.2.2
+sgmllib3k==1.0.0
+sip==6.7.12
+six==1.16.0
+sklearn-crfsuite==0.3.6
+smart-open==6.4.0
+soupsieve==2.5
+spacy==3.5.4
+spacy-alignments==0.9.1
+spacy-dbpedia-spotlight==0.2.6
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+spacy-transformers==1.2.5
+srsly==2.4.8
+stack-data==0.2.0
+sympy==1.12
+tabulate==0.9.0
+thinc==8.1.12
+threadpoolctl==2.2.0
+tinysegmenter==0.3
+tldextract==5.1.1
+tokenizers==0.13.3
+tomli==2.0.1
+torch==2.1.2
+torch-struct==0.5
+torchaudio==2.1.2
+torchdata==0.7.1
+torchtext==0.16.2
+torchvision==0.16.2
+tornado==6.3.3
+tqdm==4.65.0
+traitlets==5.7.1
+transformers==4.30.2
+triton==2.1.0
+typer==0.9.0
+typing_extensions==4.7.1
+tzdata==2023.3
+unicodedata2==15.1.0
+urllib3==1.26.18
+wasabi==1.1.2
+wcwidth==0.2.5
+weasel==0.3.4
+wheel==0.41.2
+widgetsnbextension==4.0.9
+wordcloud==0.0.0
+yake==0.4.8
